# cenat-mensage

./: .gitignore  CREDENCIAIS.txt  DEPLOY_GUIDE.md  README.md  docker-compose.yml  docker-compose.yml.bak.2026-01-23-1522  install.sh
mensageria/: .env.example  .gitignore  README.md  pyproject.toml
mensageria-frontend/: README.md  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
mensageria-frontend/src/app/: globals.css  layout.tsx  page.tsx
mensageria-frontend/src/components/: app-header.tsx  app-sidebar.tsx  theme-toggle.tsx
mensageria-frontend/src/contexts/: auth-context.tsx
mensageria-frontend/src/lib/: api-broadcasts.ts  api-groups.ts  api-media.ts  api-profile.ts  api-users.ts  api.ts  auth.ts
mensageria-frontend/src/types/: api.ts
mensageria/alembic/: env.py
mensageria/alembic/versions/: 6142947c97aa_add_broadcast_jobs_logs_media.py  945d7ae24350_initial_schema.py  e504e6e4457a_add_users_table.py
mensageria/app/: auth.py  auth_routes.py  broadcast_cleanup.py  broadcast_routes.py  config.py  contacts_routes.py  dashboard_routes.py  database.py  deps.py  groups_routes.py  main.py  media_routes.py  models.py  profile_routes.py  users_routes.py
mensageria/app/broadcast/: audience_resolver.py  worker.py
mensageria/app/chatbot/: engine.py  routes.py  scheduler.py
mensageria/app/evolution/: client.py  config.py  routes.py
mensageria/scripts/: create_admin.py
painel/: cenat-theme.css  index.html  index.html.backup  index.html.backup-disparo  login.html
webhook/: main.py  messages.json
(+20 files in other folders)
