[project]
name = "mensageria"
version = "0.1.0"
description = "Backend de mensageria mono-tenant CENAT (evolution/chatbot/automations)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.28",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
]

[tool.uv]
python-preference = "only-managed"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
